Basic CSS settings

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,7 +3,5 @@
 @tailwind utilities;
 
 :root {
-    color-scheme: dark;
-    font-size: 150%;
-    line-height: 1.75;
+    color-scheme: light dark;
 }
