--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,12 +2,30 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+    /* プロポーショナルメトリクス */
+    .ff-pm {
+        font-feature-settings: "palt" 1;
+    }
+
+    /* プロポーショナル字形 */
+    .ff-pl {
+        font-feature-settings: "pwid" 1;
+    }
+
+    /* 仮名のみプロポーショナル字形 */
+    .ff-pk {
+        font-feature-settings: "pkna" 1;
+    }
+}
+
 :root {
     color-scheme: light dark;
 }
 
 @layer base {
   :root {
+        --link: 180 75% 30%;
         --background: 0 0% 100%;
         --foreground: 0 0% 3.9%;
         --card: 0 0% 100%;
@@ -35,14 +53,15 @@
         --radius: 0.5rem;
     }
   .dark {
+        --link: 170 90% 75%;
         --background: 0 0% 3.9%;
         --foreground: 0 0% 98%;
-        --card: 0 0% 3.9%;
+        --card: 0 0% 15%;
         --card-foreground: 0 0% 98%;
         --popover: 0 0% 3.9%;
         --popover-foreground: 0 0% 98%;
-        --primary: 0 0% 98%;
-        --primary-foreground: 0 0% 9%;
+        --primary: 290 95% 31.5%;
+        --primary-foreground: 0 0% 100%;
         --secondary: 0 0% 14.9%;
         --secondary-foreground: 0 0% 98%;
         --muted: 0 0% 14.9%;
@@ -51,8 +70,8 @@
         --accent-foreground: 0 0% 98%;
         --destructive: 0 62.8% 30.6%;
         --destructive-foreground: 0 0% 98%;
-        --border: 0 0% 14.9%;
-        --input: 0 0% 14.9%;
+        --border: 0 0% 30.9%;
+        --input: 0 0% 34.9%;
         --ring: 0 0% 83.1%;
         --chart-1: 220 70% 50%;
         --chart-2: 160 60% 45%;
