Updating page structure and UI

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -68,11 +68,11 @@
         --muted-foreground: 0 0% 63.9%;
         --accent: 0 0% 14.9%;
         --accent-foreground: 0 0% 98%;
-        --destructive: 0 62.8% 30.6%;
+        --destructive: 0 62.8% 38.6%;
         --destructive-foreground: 0 0% 98%;
         --border: 0 0% 30.9%;
-        --input: 0 0% 34.9%;
-        --ring: 0 0% 83.1%;
+        --input: 0 0% 42.9%;
+        --ring: 200 80% 78.1%;
         --chart-1: 220 70% 50%;
         --chart-2: 160 60% 45%;
         --chart-3: 30 80% 55%;
@@ -88,4 +88,34 @@
   body {
     @apply bg-background text-foreground;
     }
+}
+
+/* フォームでエラーがあるフィールドに適用するスタイル */
+/* `data-error` 属性があり且つ値が空文字ではないとき */
+/* NOTE: 初期状態では `data-error` 属性がない。
+ * エラー対象のフィールドを変更するとエラー表示を消したいが
+ * Inertiaの `useForm` の仕様上、
+ * エラーメッセージに空文字列を設定することになるため、
+ * `data-error` 属性自体は消えずに値に空文字がセットされる。
+ * だからこのようなセレクタが必要。
+ */
+:is(
+    input[type=text],
+    input[type=email],
+    input[type=tel],
+    input[type=url],
+    input[type=password],
+    input[type=number],
+    select,
+    textarea
+)[data-error]:not([data-error=""]) {
+    @apply border-destructive;
+}
+
+.link {
+    @apply cursor-pointer text-link underline;
+}
+
+.link-like-button {
+    @apply cursor-pointer gap-1 inline-flex items-center text-link underline;
 }
